# Projetc

Projects/project2-copy/: Makefile  config.status  project2.glade  project2.glade.bak
Sasori/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  sasori.glade.bak  sasori.gladep.bak
Sasori/autom4te.cache/: output.0  requests  traces.0  traces.1
Sasori/po/: Makefile  Makefile.in
Sasori/src/: Makefile  Makefile.am  Makefile.in  Restauration.txt  callbacks.c  callbacks.h  hebergement.txt  interface.c  interface.c.bak  interface.h  main.c  rh.c  rh.h  rr.c  rr.h  sasori
Sasori/src/.deps/: callbacks.Po  rh.Po  rr.Po
integration/Espace Nutrition/: fonctions.c
integration/ouanes/: Makefile  Makefile.in  config.status  projetf.glade.bak  projetf.gladep
integration/ouanes/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  interface.c  interface.c.bak  interface.h  interface.h.bak  login.c  main.c  projetf
integration/ouanes/src/.deps/: callbacks.Po
integration2/: Makefile  Makefile.am  config.h  config.status  configure  configure.in  projetf.glade
integration2/autom4te.cache/: requests  traces.0  traces.1
integration2/po/: Makefile  Makefile.in
integration2/src/: Makefile  Makefile.am  Makefile.in  Nutritionniste.txt  callbacks.c  callbacks.h  fonction.h  fonctions.c  interface.c  interface.c.bak  interface.h.bak  main.c  mery.c  mery.h  projetf  stock.txt
projet3/: Makefile  config.status  projet3.glade.bak
projet3/src/: Makefile  main.c  (+11 more)
projet9/: Makefile  config.status  projet9.glade
(+41 files in other folders)
